--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
-    "develop": "strapi develop",
-    "start": "strapi start",
+    "develop": "node app.js",
+    "start": "node app.js",
     "build": "strapi build",
     "strapi": "strapi"
   },
